# mosalign

./: LICENSE  README.md  pyproject.toml
mosalign/: __init__.py  gui.py
